﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.1.4) experimental; urgency=low

  * osfunc: more logging around gettemppath

-- Detlef Oertel <d.oertel@uib.de>  Mon, 03 Jun 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.3) experimental; urgency=low

  * shellInAnIcon: on loglevel 9: reread teporary files and do not delete
  * oslog: logdatei property usedloglevel (this is real used log level with force_min_loglevel)
  * osfunclin: new function getMyIpDeciceByDefaultRoute
  * osparser: GetMACAddress2: use getMyIpDeciceByDefaultRoute
  * osfunclin: more logging in getMyIpDeciceByDefaultRoute, getMyIpByDefaultRoute
  * osparser: demandlicensekey: try 3 ways to get the own fqdn
  * osfunc: createtextfile: Message:'Directory ' + dirname + ' did not exist und was created' now on loglevel 6 (was warning)
  * osfunc: StartProcess_cp_el: minor logging change ; //no {$OVERFLOWCHECKS ON}
  * osfunc / osfuncwin: replace 'exitCode := lpExitCode;' by 'exitCode := longint(lpExitCode);'

-- Detlef Oertel <d.oertel@uib.de>  Tue, 14 May 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.2) stable; urgency=low

  * add oslistedit to projectfiles
  * fixes in oslistedit
  * add osinputstring
  * add new string function stringinput(< message str>,< boolstr confidential>)
  * document randomIntStr(<>)
  * fix on gettemppath

-- Detlef Oertel <d.oertel@uib.de>  Fri, 12 Apr 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.1) stable; urgency=low

  * fix in oswmi (give stringlist as stringlist)

-- Detlef Oertel <d.oertel@uib.de>  Thu, 04 04 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.0) experimental; urgency=low

  * integration of new xml functions:
    * new units in common: osxml, osxmltdom, osxmlsections
    * new section type xml2
    * osparser: Tuibinstscript: new method doxml2patch: