@@ -7,6 +7,7 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 opsi-winst/opsi-script (4.12.1.4) experimental; urgency=low
 
   * osfunc: more logging around gettemppath
+  * osparser: enabled getHWBiosInfoMap again
 
 -- Detlef Oertel <d.oertel@uib.de>  Mon, 03 Jun 2019:15:00:00 +0200
 
